tests/errors/specifiers_violation.c
typedef int A;

int main()
{
	static const int int a;
	static const unsigned A b;
	signed unsigned int c;
	long short d;
	short double e;
	unsigned double f;
	typedef static int X;
}